# QuanTa

./: .gitignore  README.md  best_config.json  optimization_results.csv  pyproject.toml
notebooks/: mean_reversion.ipynb  momentum_strategy copy.ipynb  momentum_strategy.ipynb  momentum_strategy.py  optim.ipynb  optim_long_short.ipynb  yh.ipynb
quanta/: __init__.py
quanta/cli/: __init__.py  __main__.py  cli.py  cli_cache.py  cli_fetch.py  cli_help.py  cli_plot.py  cli_ta.py
quanta/clients/: chart.py  risk.py  yfinance.py
quanta/ta_clients/: optimization.py  optimization_strategy.py
quanta/utils/: ta.py  trace.py
