[tool.poetry]
name = "QuanTa"
version = "0.1.0"
description = ""
authors = ["Mileto <cmileto@mercuria.com>"]
readme = "README.md"
packages = [{include = "quanta"}]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
polars = {extras = ["rtcompat"], version = ">=1.33.1,<2.0.0"}
requests = ">=2.32.5,<3.0.0"
pyarrow = ">=21.0.0,<22.0.0"
optuna = {extras = ["fanova"], version = ">=4.5.0,<5.0.0"}
pandas = ">=2.3.3,<3.0.0"
plotly = ">=6.3.1,<7.0.0"
nbformat = ">=5.10.4,<6.0.0"
scikit-learn = ">=1.7.2,<2.0.0"
click = ">=8.1.3,<8.2.0"
typer = ">=0.12.3,<0.13.0"

[tool.poetry.scripts]
quanta = "quanta.cli.cli:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
